--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -31,7 +31,7 @@
     <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
         <nav>
             <div
-                class="nav-container font-sf dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
+                class="nav-container font-sf text-black dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
                 <div class="logo">
                     <p class="text-tiny lg:text-tiny">
                         <a href="index.html">OZENUA OLUWATOBI</a>
@@ -60,7 +60,7 @@
         </nav>
 
         <section class="header space-y-7 py-10 lg:py-16">
-            <p class="header-text dark:text-white font-caudex text-xl lg:text-lg4xl">
+            <p class="header-text text-black dark:text-white font-caudex text-xl lg:text-lg4xl">
                 JUMIAR : An AR Experience in Mobile Commerce.
             </p>
 
@@ -97,8 +97,8 @@
                 </p>
             </div>
 
-            <div class="why-jumia mt-20 space-y-5">
-                <p class="why-jumia-header-text font-caudex text-white text-xl lg:text-2xl">
+            <div class="why-jumia mt-24 space-y-5">
+                <p class="why-jumia-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     Why Jumia
                 </p>
 
@@ -123,12 +123,12 @@
                     its platform to further increase the user experience.
                 </p>
 
-                <div class="why-jumia-image w-full mt-5 lg:mt-10 mb-20 lg:mb-32">
+                <div class="why-jumia-image w-full pt-5 lg:mt-10 mb-20 lg:mb-32">
                     <a data-lightbox="mygallery" href="../assets/images/gt case study.png"><img
-                            src="../assets/images/gt case study.png" alt=""></a>
+                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/gt case study.png" alt=""></a>
                 </div>
 
-                <p class="extended-why-jumia-header-text font-caudex text-white text-xl lg:text-2xl">
+                <p class="extended-why-jumia-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     Why Jumia
                 </p>
 
@@ -143,7 +143,7 @@
             </div>
 
             <div class="ideation mt-24 space-y-5">
-                <p class="ideation-header-text font-caudex text-white text-xl lg:text-2xl ">Ideation</p>
+                <p class="ideation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl ">Ideation</p>
 
                 <p class="ideation-details-text font-sf text-primary text-sm">
                     One of the challenges of online shopping is not being able to test out
@@ -157,7 +157,8 @@
             </div>
 
             <div class="solution mt-24 space-y-5">
-                <p class="solution-header-text font-caudex text-white text-xl lg:text-2xl ">The Solution</p>
+                <p class="solution-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl ">The Solution
+                </p>
 
                 <p class="solution-details-text font-sf text-primary text-sm">
                     After understanding the demands for this concept, we decided it would be best to make some UI
@@ -176,19 +177,21 @@
             </div>
 
             <div class="userflow mt-24 space-y-5">
-                <p class="userflow-header-text font-caudex text-white text-xl lg:text-2xl">User flow</p>
+                <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">User flow</p>
 
                 <p class="userflow-details-text font-sf text-primary text-sm">
                     We designed a User flow to validate the idea and create a functional design for the AR feature.
                 </p>
 
                 <div class="userflow-image w-full lg:mb-32">
-                    <a href="../assets/images/gt user flow.png"><img src="../assets/images/gt user flow.png" alt=""></a>
+                    <a href="../assets/images/gt user flow.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/gt user flow.png" alt=""></a>
                 </div>
             </div>
 
             <div class="wireframes mt-24  space-y-5">
-                <p class="wireframes-header-text font-caudex text-white text-xl lg:text-2xl">Wireframes</p>
+                <p class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Wireframes
+                </p>
 
                 <p class="wireframes-details-text font-sf text-primary text-sm">
                     After creating the User flow, I began creating wireframes to validate the flow and test out possible
@@ -198,13 +201,13 @@
                 </p>
 
                 <div class="wireframes-image w-full lg:mb-32">
-                    <a href="../assets/images/gt wireframes.png"><img src="../assets/images/gt wireframes.png"
-                            alt=""></a>
+                    <a href="../assets/images/gt wireframes.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/gt wireframes.png" alt=""></a>
                 </div>
             </div>
 
             <div class="design-style-guide mt-24  space-y-5">
-                <p class="design-style-guide-header-text font-caudex text-white text-xl lg:text-2xl">
+                <p class="design-style-guide-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     Design style guide
                 </p>
 
@@ -214,13 +217,14 @@
                 </p>
 
                 <div class="design-style-guide-image w-full lg:mt-10 lg:mb-32">
-                    <a href="../assets/images/gt design style.png"><img src="../assets/images/gt design style.png"
-                            alt=""></a>
+                    <a href="../assets/images/gt design style.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/gt design style.png" alt=""></a>
                 </div>
             </div>
 
             <div class="visual-design mt-24 lg:my-40 space-y-5">
-                <p class="visual-designheader-text font-caudex text-white text-xl lg:text-2xl">Visual Design</p>
+                <p class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Visual
+                    Design</p>
 
                 <p class="visual-design-details-text font-sf text-primary text-sm">
                     In this phase, I jump right into adding colors, and images. During this process, I produce
@@ -230,14 +234,17 @@
                 </p>
 
                 <div class="visual-design-images w-full space-y-3">
-                    <img src="../assets/images/gt visual design 1.png" alt="">
-                    <img src="../assets/images/gt visual design 2.png" alt="">
+                    <img class="rounded-2xl lg:rounded-3xl" class="rounded-2xl"
+                        src="../assets/images/gt visual design 1.png" alt="">
+                    <img class="rounded-2xl lg:rounded-3xl" class="rounded-2xl"
+                        src="../assets/images/gt visual design 2.png" alt="">
                 </div>
             </div>
 
             <div class="further-visual-design space-y-5 lg:grid grid-cols-2 mt-24">
                 <div class="texts lg:pr-10 space-y-5 lg:space-y-0">
-                    <p class="visual-design-header-text font-caudex text-white text-xl lg:text-2xl">Visual Design</p>
+                    <p class="visual-design-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
+                        Visual Design</p>
 
                     <p class="visual-design-details-text font-sf text-primary text-sm">
                         To make the whole mobile experience uniform and the AR feature, we decided that the home
@@ -257,13 +264,13 @@
                 </div>
 
                 <div class="further-visual-design-image">
-                    <a href="../assets/images/gt visual design single.png"><img
+                    <a href="../assets/images/gt visual design single.png"><img class="rounded-2xl lg:rounded-3xl"
                             src="../assets/images/gt visual design single.png" alt=""></a>
                 </div>
             </div>
 
             <div class="the-screen-search mt-24 space-y-5">
-                <p class="the-screen-search-header-text font-caudex text-white text-xl lg:text-2xl">
+                <p class="the-screen-search-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     The search screen: A new way to search
                 </p>
 
@@ -279,15 +286,16 @@
                 </p>
 
                 <div class="grid grid-cols-2 gap-x-2 lg:gap-x-10 lg:mt-14">
-                    <a href="../assets/images/search screen 1.png"><img src="../assets/images/search screen 1.png"
-                            alt=""></a>
-                    <a href="../assets/images/search screen 2.png"><img src="../assets/images/search screen 2.png"
-                            alt=""></a>
+                    <a href="../assets/images/search screen 1.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/search screen 1.png" alt=""></a>
+                    <a href="../assets/images/search screen 2.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/search screen 2.png" alt=""></a>
                 </div>
             </div>
 
             <div class="test-ar mt-24 space-y-5">
-                <p class="test-ar font-caudex text-white text-xl lg:text-2xl">Test AR: Real-time Product Testing</p>
+                <p class="test-ar font-caudex text-black dark:text-white text-xl lg:text-2xl">Test AR: Real-time Product
+                    Testing</p>
 
                 <p class="test-ar-deats font-sf text-primary text-sm">
                     The second part of the solutions features a real-time product test feature using Augmented
@@ -305,7 +313,8 @@
 
                 <div class="space-y-10 lg:grid grid-cols-2 gap-x-10 lg:mt-10">
                     <div class="info-1 space-y-5">
-                        <a href="../assets/images/test ar 1.png"><img src="../assets/images/test ar 1.png" alt=""></a>
+                        <a href="../assets/images/test ar 1.png"><img class="rounded-2xl lg:rounded-3xl"
+                                class="rounded-2xl" src="../assets/images/test ar 1.png" alt=""></a>
 
                         <p class="info-text font-sf text-primary text-sm lg:mt-8">
                             To use the feature, the user selects the AR button and scans for a flat surface which
@@ -316,7 +325,8 @@
                     </div>
 
                     <div class="info-2 space-y-5">
-                        <a href="../assets/images/test ar 2.png"><img src="../assets/images/test ar 2.png" alt=""></a>
+                        <a href="../assets/images/test ar 2.png"><img class="rounded-2xl lg:rounded-3xl"
+                                class="rounded-2xl" src="../assets/images/test ar 2.png" alt=""></a>
 
                         <p class="info-text font-sf text-primary text-sm lg:mt-8">
                             The user is prompted to select a product from their cart or search for a new product
@@ -335,7 +345,8 @@
             </div>
 
             <div class="conclusion mt-24 space-y-5">
-                <p class="conclusion-header-text font-caudex text-white text-xl lg:text-2xl">Conclusion</p>
+                <p class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Conclusion
+                </p>
 
                 <p class="conclusion-details-text font-sf text-primary text-sm">
                     The entire design process of this concept design was totally a new experience for me as a designer.
@@ -368,29 +379,27 @@
             </div>
         </section>
     </div>
-
-    <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24">
+    <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24">
         <div class="container mx-auto px-4">
             <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
                 <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
-                    <p class="got-an-idea font-caudex text-white text-2xl lg:text-5xl">
+                    <p class="got-an-idea font-caudex text-black dark:text-white text-2xl lg:text-5xl">
                         Got an idea?
                     </p>
 
-                    <p class="lets-talk font-sf text-white text-base lg:text-xl">
+                    <p class="lets-talk font-sf text-black dark:text-white text-base lg:text-xl">
                         Let's talk about it.
                     </p>
                 </div>
 
-                <div class="contacts font-sf lg:w-2/4 text-white text-xs">
-                    <div>
-                        <ul class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
-                            <a class="instagram-footer-link" href="#">Instagram</a>
-                            <a class="youtube-footer-link" href="#">Youtube</a>
-                            <a class="dribble-footer-link" href="#">Dribble</a>
-                            <a class="linkedin-footer-link" href="#">LinkedIn</a>
-                            <a class="behance-footer-link" href="#">Behance</a>
-                            <a class="twitter-footer-link" href="#">Twitter</a>
+                <div class="contacts font-sf lg:w-2/4 text-black dark:text-white text-xs">
+                    <div class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
+                        <a class="instagram-footer-link" href="#">Instagram</a>
+                        <a class="youtube-footer-link" href="#">Youtube</a>
+                        <a class="dribble-footer-link" href="#">Dribble</a>
+                        <a class="linkedin-footer-link" href="#">LinkedIn</a>
+                        <a class="behance-footer-link" href="#">Behance</a>
+                        <a class="twitter-footer-link" href="#">Twitter</a>
                         </ul>
                     </div>
                 </div>
@@ -410,4 +419,5 @@
     <script type="module" src="js/index.js"></script>
 
 </body>
+
 </html>
