--- a/src/crptly.html
+++ b/src/crptly.html
@@ -11,16 +11,7 @@
     <link rel="stylesheet" href="sass/cursor.scss">
     <link rel="stylesheet" href="sass/style.scss">
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-        @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
         @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
     </style>
 </head>
 
@@ -28,7 +19,7 @@
     <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
         <nav>
             <div
-                class="nav-container font-sf dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
+                class="nav-container font-sf dark:text-black dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
                 <div class="logo">
                     <p class="text-tiny lg:text-tiny">
                         <a href="index.html">OZENUA OLUWATOBI</a>
@@ -57,7 +48,7 @@
         </nav>
 
         <section class="header space-y-7 py-10 lg:py-16">
-            <p class="header-text dark:text-white font-caudex text-xl lg:text-lg4xl">
+            <p class="header-text dark:text-black dark:text-white font-caudex text-xl lg:text-lg4xl">
                 Cryptly: Creating true experience with Cryptocurrency.
             </p>
 
@@ -73,7 +64,7 @@
 
         <section class="crptly mt-10">
             <div class="overview space-y-5">
-                <p class="overview-header-text font-caudex text-white text-xl lg:text-2xl lg:py-10">
+                <p class="overview-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl lg:py-10">
                     Overview
                 </p>
 
@@ -93,7 +84,7 @@
             </div>
 
             <div class="the-problem mt-24 space-y-5">
-                <p class="the-problem-header-text font-caudex text-white text-xl lg:text-2xl">
+                <p class="the-problem-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     The problem
                 </p>
 
@@ -109,7 +100,7 @@
                     to understand by new cryptocurrency users.
                 </p>
 
-                <p class="pain-points-header-text font-caudex text-white text-lg lg:text-2xl">
+                <p class="pain-points-header-text font-caudex text-black dark:text-white text-lg lg:text-2xl">
                     Pain points for users on other platforms
                 </p>
 
@@ -123,7 +114,7 @@
             </div>
 
             <div class="goals mt-24 space-y-5">
-                <p class="goal-header-text font-caudex text-white text-xl lg:text-2xl">Goals</p>
+                <p class="goal-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Goals</p>
 
                 <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
                     <li>Non-educational onboarding process.</li>
@@ -135,7 +126,8 @@
             </div>
 
             <div class="solution mt-24 space-y-5">
-                <p class="solution-header-text font-caudex text-white text-xl lg:text-2xl">The Solution</p>
+                <p class="solution-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">The Solution
+                </p>
 
                 <p class="solution-details-text font-sf text-primary text-sm lg:my-10">
                     Cryptly was designed to provide simple user experience to it’s users by creating an experience the
@@ -146,16 +138,18 @@
             </div>
 
             <div class="design-process mt-24 space-y-5">
-                <p class="design-process-header-text font-caudex text-white text-xl lg:text-2xl">Design process</p>
+                <p class="design-process-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Design
+                    process</p>
 
                 <div class="design-process-image">
-                    <a href="../assets/images/design process.png"><img src="../assets/images/design process.png" alt=""
-                            class="lg:mt-8"></a>
+                    <a href="../assets/images/design process.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/design process.png" alt="" class="lg:mt-8"></a>
                 </div>
             </div>
 
             <div class="swot-analysis mt-24 space-y-5">
-                <p class="swot-analysis-header-text font-caudex text-white text-xl lg:text-2xl">SWOT analysis</p>
+                <p class="swot-analysis-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">SWOT
+                    analysis</p>
 
                 <p class="swot-analysis-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     I researched on different wallet apps and found out those who seem to be offering the same solution
@@ -164,20 +158,22 @@
                 </p>
 
                 <div class="swot-analysis-image">
-                    <a href="../assets/images/userflow 1.png"><img src="../assets/images/userflow 1.png" alt=""></a>
+                    <a href="../assets/images/userflow 1.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/userflow 1.png" alt=""></a>
                 </div>
             </div>
 
             <div class="userflow mt-24 space-y-5">
-                <p class="userflow-header-text font-caudex text-white text-xl lg:text-2xl">User flow</p>
+                <p class="userflow-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">User flow</p>
 
                 <div class="userflow-images">
-                    <a href="../assets/images/userflow 1.png"><img src="../assets/images/userflow 1.png" alt=""></a>
+                    <a href="../assets/images/userflow 1.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/userflow 1.png" alt=""></a>
                 </div>
             </div>
 
             <div class="who-are-the-users mt-24 space-y-5">
-                <p class="who-are-the-users-header-text font-caudex text-white text-xl lg:text-2xl">
+                <p class="who-are-the-users-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                     Who are the users
                 </p>
 
@@ -188,15 +184,16 @@
                 </p>
 
                 <div class="users grid gap-y-3 lg:gap-y-10">
-                    <a href="../assets/images/customer alex.png"><img src="../assets/images/customer alex.png"
-                            alt=""></a>
-                    <a href="../assets/images/customer jane.png"><img src="../assets/images/customer jane.png"
-                            alt=""></a>
+                    <a href="../assets/images/customer alex.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/customer alex.png" alt=""></a>
+                    <a href="../assets/images/customer jane.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/customer jane.png" alt=""></a>
                 </div>
             </div>
 
             <div class="wireframes mt-24 space-y-5">
-                <p class="wireframes-header-text font-caudex text-white text-xl lg:text-2xl">Wireframes</p>
+                <p class="wireframes-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Wireframes
+                </p>
 
                 <p class="wireframes-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Wireframes help me focus on key functions, elements, and actions before starting the visual design.
@@ -205,13 +202,16 @@
                 </p>
 
                 <div class="wireframes-image space-y-3">
-                    <a href="../assets/images/wireframes.png"><img src="../assets/images/wireframes.png" alt=""></a>
-                    <a href="../assets/images/wireframes.png"><img src="../assets/images/wireframes.png" alt=""></a>
+                    <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/wireframes.png" alt=""></a>
+                    <a href="../assets/images/wireframes.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/wireframes.png" alt=""></a>
                 </div>
             </div>
 
             <div class="splash-screen mt-24 space-y-5">
-                <p class="splash-screen-header-text font-caudex text-white text-xl lg:text-2xl">Splashscreen</p>
+                <p class="splash-screen-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
+                    Splashscreen</p>
 
                 <p class="splash-screen-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     A quick onbarding experience to help the user grasp the posibilities that have been placed on their
@@ -219,13 +219,14 @@
                 </p>
 
                 <div class="splash-screen-image">
-                    <a href="../assets/images/splash screen.png"><img src="../assets/images/splash screen.png"
-                            alt=""></a>
+                    <a href="../assets/images/splash screen.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/splash screen.png" alt=""></a>
                 </div>
             </div>
 
             <div class="onboarding mt-24 space-y-5">
-                <p class="onboarding-header-text font-caudex text-white text-xl lg:text-2xl">Onboarding</p>
+                <p class="onboarding-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Onboarding
+                </p>
 
                 <p class="onboarding-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     With a more generic onboarding the users can join the app using just their name, email and get
@@ -236,13 +237,14 @@
                 </p>
 
                 <div class="onboarding-image">
-                    <a href="../assets/images/onboarding.png"><img src="../assets/images/onboarding.png" alt=""></a>
+                    <a href="../assets/images/onboarding.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/onboarding.png" alt=""></a>
                 </div>
             </div>
 
             <div class="navigation-and-homepage mt-24 space-y-5 lg:grid grid-cols-2">
                 <div class="texts space-y-5 lg:pr-10">
-                    <p class="navigation-header-text font-caudex text-white text-xl lg:text-2xl">
+                    <p class="navigation-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                         Navigation and Home page
                     </p>
 
@@ -258,13 +260,14 @@
                 </div>
 
                 <div class="image">
-                    <a href="../assets/images/navigation.png"><img src="../assets/images/navigation.png" alt=""></a>
+                    <a href="../assets/images/navigation.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/navigation.png" alt=""></a>
                 </div>
             </div>
 
             <div class="send-coins mt-24 space-y-5 lg:grid grid-cols-2">
                 <div class="texts space-y-5 lg:pr-10">
-                    <p class="send-coins-header-text font-caudex text-white text-xl lg:text-2xl">
+                    <p class="send-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">
                         Send coins
                     </p>
 
@@ -282,12 +285,14 @@
                 </div>
 
                 <div class="send-coins-image">
-                    <a href="../assets/images/navigation.png"><img src="../assets/images/navigation.png" alt=""></a>
+                    <a href="../assets/images/navigation.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/navigation.png" alt=""></a>
                 </div>
             </div>
 
             <div class="receiving-coins mt-24 space-y-5">
-                <p class="receiving-coins-header-text font-caudex text-white text-xl lg:text-2xl">Error handling</p>
+                <p class="receiving-coins-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Error
+                    handling</p>
 
                 <p class="receiving-coins -details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Now it’s something you really don’t have to worry about. You may never really need to come to this
@@ -298,13 +303,13 @@
                 </p>
 
                 <div class="receiving-coins-image">
-                    <a href="../assets/images/error handling.png"><img src="../assets/images/error handling.png"
-                            alt=""></a>
+                    <a href="../assets/images/error handling.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/error handling.png" alt=""></a>
                 </div>
             </div>
 
             <div class="receive-design mt-24 space-y-5">
-                <p class="header-textfont-caudex text-white text-xl lg:text-2xl">Receive</p>
+                <p class="header-textfont-caudex text-black dark:text-white text-xl lg:text-2xl">Receive</p>
 
                 <p class="receive-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Many other parts of the UI got redesigned as one of the goal is to give a full visual redesign of
@@ -312,13 +317,14 @@
                 </p>
 
                 <div class="receive-image">
-                    <a href="../assets/images/better visual.png"><img src="../assets/images/better visual.png"
-                            alt=""></a>
+                    <a href="../assets/images/better visual.png"><img class="rounded-2xl lg:rounded-3xl"
+                            class="rounded-2xl" src="../assets/images/better visual.png" alt=""></a>
                 </div>
             </div>
 
             <div class="conclusion mt-24 space-y-5">
-                <p class="conclusion-header-text font-caudex text-white text-xl lg:text-2xl">Conclusion</p>
+                <p class="conclusion-header-text font-caudex text-black dark:text-white text-xl lg:text-2xl">Conclusion
+                </p>
 
                 <p class="conclusion-details font-sf text-primary text-sm lg:my-8">
                     The focus of this redesign was centered around delivering an all-new experience on the GTBank
@@ -349,28 +355,27 @@
         </section>
     </div>
 
-    <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24">
+    <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24">
         <div class="container mx-auto px-4">
             <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
                 <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
-                    <p class="got-an-idea font-caudex text-white text-2xl lg:text-5xl">
+                    <p class="got-an-idea font-caudex text-black dark:text-white text-2xl lg:text-5xl">
                         Got an idea?
                     </p>
 
-                    <p class="lets-talk font-sf text-white text-base lg:text-xl">
+                    <p class="lets-talk font-sf text-black dark:text-white text-base lg:text-xl">
                         Let's talk about it.
                     </p>
                 </div>
 
-                <div class="contacts font-sf lg:w-2/4 text-white text-xs">
-                    <div>
-                        <ul class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
-                            <a class="instagram-footer-link" href="#">Instagram</a>
-                            <a class="youtube-footer-link" href="#">Youtube</a>
-                            <a class="dribble-footer-link" href="#">Dribble</a>
-                            <a class="linkedin-footer-link" href="#">LinkedIn</a>
-                            <a class="behance-footer-link" href="#">Behance</a>
-                            <a class="twitter-footer-link" href="#">Twitter</a>
+                <div class="contacts font-sf lg:w-2/4 text-black dark:text-white text-xs">
+                    <div class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
+                        <a class="instagram-footer-link" href="#">Instagram</a>
+                        <a class="youtube-footer-link" href="#">Youtube</a>
+                        <a class="dribble-footer-link" href="#">Dribble</a>
+                        <a class="linkedin-footer-link" href="#">LinkedIn</a>
+                        <a class="behance-footer-link" href="#">Behance</a>
+                        <a class="twitter-footer-link" href="#">Twitter</a>
                         </ul>
                     </div>
                 </div>
