--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,7 @@
   <link rel="stylesheet" href="../fonts/stylesheet.css">
 
   <style>
-    @import url("https://fonts.googleapis.com/css2?family=Sarala:wght@400;700&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
     @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
   </style>
 </head>
 
@@ -479,11 +470,12 @@
       </div>
     </section>
 
-    <section class="featured-projects py-16 lg:py-20 font-normal" id="featured-projects">
+    <section class="featured-projects py-16 lg:py-20 font-normal" id="featured-projects"> 
       <p class="font-sf text-xs lg:text-sm lg:tracking-widest dark:text-white">FEATURED PROJECTS</p>
 
       <p class="pojects-big-text font-caudex text-light text-lg5xl lg:text-8xl lg:tracking-tighter dark:text-dark">
-        PROJECTS</p>
+        PROJECTS
+      </p>
 
       <div class="scroll-and-projects flex justify-between mt-16 lg:pt-20 lg:pb-20">
         <div class="vertical-scroll relative h-40 lg:h-56 w-px lg:w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
@@ -537,17 +529,17 @@
 
           </div>
 
-          <div class="jumiar lg:mb-0">
+          <div class="paysure lg:mb-0">
             <p class="num font-caudex text-sm lg:text-xl">04</p>
 
-            <p class="juimar-header-text font-caudex my-2 lg:pb-5 text-xl lg:text-5xl tracking-tighter dark:text-white">
-              <a href="jumiar.html">
-                JUMIAR
+            <p class="paysure-header-text font-caudex my-2 lg:pb-5 text-xl lg:text-5xl tracking-tighter dark:text-white">
+              <a href="paysure.html">
+                Paysure
               </a>
             </p>
 
-            <p class="juimar-subtext font-sf text-primary text-xs lg:text-xs">
-              A new experience to online shopping.
+            <p class="paysure-subtext font-sf text-primary text-xs lg:text-xs">
+              A new experience to online banking.
             </p>
 
           </div>
@@ -555,7 +547,7 @@
       </div>
 
       <div class="community-quote flex justify-between pt-20 lg:pt-20 lg:px-32">
-        <svg class="w-8 lg:w-10 mb-10 lg:mb-10" viewBox="0 0 69 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="w-8 lg:w-10 mb-5 lg:mb-10" viewBox="0 0 69 49" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M0.528643 39.7799V38.8943L1.02064 30.5305C1.08624 29.4153 1.61103 27.5785 2.59501 25.0202C5.80936 15.2459 11.9429 7.76761 20.9955 2.58529C22.8979 1.14211 24.6363 0.420521 26.2107 0.420521C27.457 0.48612 28.605 0.912513 29.6546 1.6997C29.917 2.15889 30.0482 2.61809 30.0482 3.07728C30.0482 3.79887 29.753 4.45486 29.1626 5.04525C28.3098 5.96364 26.8995 6.94762 24.9315 7.99721C18.3716 11.474 14.3044 16.2955 12.7301 22.4618C19.8804 22.921 23.4555 25.8729 23.4555 31.3177V31.9081L22.8651 40.2719C22.4059 45.4543 18.5028 48.1766 11.1557 48.439C4.07099 47.9798 0.528643 45.0935 0.528643 39.7799ZM38.8057 39.7799V38.8943L39.2977 30.5305C39.3633 29.4153 39.7897 27.7753 40.5768 25.6105L42.5448 20.789C45.8248 13.3763 51.4007 7.30842 59.2726 2.58529C61.1749 1.14211 62.9461 0.420521 64.5861 0.420521C65.8325 0.48612 66.9477 0.912513 67.9316 1.6997C68.2596 2.22449 68.4236 2.71649 68.4236 3.17568C68.4236 3.83167 68.1284 4.45486 67.538 5.04525C66.6197 5.96364 65.1765 6.94762 63.2085 7.99721C56.6486 11.474 52.5815 16.2955 51.0071 22.4618C58.1574 22.921 61.7325 25.8401 61.7325 31.2193V31.9081L61.2405 40.2719C60.7813 45.7822 57.3702 48.5374 51.0071 48.5374C50.4167 48.4718 49.8919 48.439 49.4327 48.439C42.348 48.439 38.8057 45.5526 38.8057 39.7799Z"
             fill="#18161D" />
@@ -571,7 +563,7 @@
           </p>
         </div>
 
-        <svg class="w-8 lg:w-10 mb-10 lg:mb-10" viewBox="0 0 69 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="w-8 lg:w-10 mb-5 lg:mb-10" viewBox="0 0 69 49" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M68.4714 39.7799V38.8943L67.9794 30.5305C67.9138 29.4153 67.389 27.5785 66.405 25.0202C63.1906 15.2459 57.0571 7.76761 48.0045 2.58529C46.1021 1.14211 44.3637 0.420521 42.7893 0.420521C41.543 0.48612 40.395 0.912513 39.3454 1.6997C39.083 2.15889 38.9518 2.61809 38.9518 3.07728C38.9518 3.79887 39.247 4.45486 39.8374 5.04525C40.6902 5.96364 42.1005 6.94762 44.0685 7.99721C50.6284 11.474 54.6956 16.2955 56.2699 22.4618C49.1196 22.921 45.5445 25.8729 45.5445 31.3177V31.9081L46.1349 40.2719C46.5941 45.4543 50.4972 48.1766 57.8443 48.439C64.929 47.9798 68.4714 45.0935 68.4714 39.7799ZM30.1943 39.7799V38.8943L29.7023 30.5305C29.6367 29.4153 29.2103 27.7753 28.4232 25.6105L26.4552 20.789C23.1752 13.3763 17.5993 7.30842 9.72743 2.58529C7.82506 1.14211 6.05388 0.420521 4.41391 0.420521C3.16753 0.48612 2.05234 0.912513 1.06836 1.6997C0.740364 2.22449 0.576366 2.71649 0.576366 3.17568C0.576366 3.83167 0.871562 4.45486 1.46195 5.04525C2.38034 5.96364 3.82352 6.94762 5.79149 7.99721C12.3514 11.474 16.4185 16.2955 17.9929 22.4618C10.8426 22.921 7.26747 25.8401 7.26747 31.2193V31.9081L7.75946 40.2719C8.21865 45.7822 11.6298 48.5374 17.9929 48.5374C18.5833 48.4718 19.1081 48.439 19.5673 48.439C26.652 48.439 30.1943 45.5526 30.1943 39.7799Z"
             fill="#18161D" />
@@ -600,7 +592,8 @@
 
 
           <p class="presently-header-text font-caudex font-semibold text-2xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
-            Presently</p>
+            Presently
+           </p>
 
           <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 leading-5">
             I have also contributed immensely to the online design community with
@@ -697,9 +690,9 @@
       <div class="div overflow-hidden relative lg:h-48 flex justify-between lg:items-center mt-5">
         <!-- Blocks for big screens -->
         <div class="blocks flex items-center lg:-ml-10">
-          <div class="rotated-block lg:w-16 lg:h-32 lg:mt-10"></div>
-          <div class="rotated-block lg:w-16 lg:h-80 lg:mt-0 lg:ml-20 lg:mr-6"></div>
-          <div class="rotated-block lg:w-16 lg:h-32 lg:mt-32"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:w-16 lg:h-32 lg:mt-10"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:w-16 lg:h-80 lg:mt-0 lg:ml-20 lg:mr-6"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:w-16 lg:h-32 lg:mt-32"></div>
         </div>
 
         <div class="texts py-5 lg:py-3 px-5 lg:px-10 z-50">
@@ -716,27 +709,27 @@
         </div>
 
         <div class="z-10">
-          <div class="rotated-block lg:hidden w-16 h-80 absolute -bottom-20 right-20"></div>
-          <div class="rotated-block lg:hidden w-16 h-80 absolute -bottom-20 -right-10"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:hidden w-16 h-80 absolute -bottom-20 right-20"></div>
+          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:hidden w-16 h-80 absolute -bottom-20 -right-10"></div>
         </div>
       </div>
     </section>
   </div>
 
-  <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24">
+  <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24">
     <div class="container mx-auto px-4">
       <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
         <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
-          <p class="got-an-idea font-caudex text-white text-2xl lg:text-5xl">
+          <p class="got-an-idea font-caudex text-black dark:text-white text-2xl lg:text-5xl">
             Got an idea?
           </p>
 
-          <p class="lets-talk font-sf text-white text-base lg:text-xl">
+          <p class="lets-talk font-sf text-black dark:text-white text-base lg:text-xl">
             Let's talk about it.
           </p>
         </div>
 
-        <div class="contacts font-sf lg:w-2/4 text-white text-xs">
+        <div class="contacts font-sf lg:w-2/4 text-black dark:text-white text-xs">
           <div class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
             <a class="instagram-footer-link" href="#">Instagram</a>
             <a class="youtube-footer-link" href="#">Youtube</a>
