--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="bg-white dark:bg-dark">
-  <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
+  <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
     <nav>
       <div class="nav-container font-sf dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
         <div class="logo">
@@ -51,7 +51,7 @@
     <section class="hero py-14 lg:py-16" id="hero">
       <div class="hero-container">
         <!-- Hero header for small screens -->
-        <p class="hero-header-text lg:hidden font-caudex dark:text-white text-5xl text-left tracking-tight">
+        <p class="hero-header-text lg:hidden font-caudex dark:text-white text-5xl sm:text-6xl text-left tracking-tight">
           Hey, I'm Ozenua.
         </p>
 
@@ -267,7 +267,7 @@
 
         <!-- Scroll, text and floating svg for small screens -->
         <div class="scroll-and-text lg:w-2/3 mt-5 lg:mt-5 lg:hidden justify-between items-center">
-          <p class="hero-details-text font-sf text-xs text-left text-primary lg:mb-10 lg:leading-7 lg:w-3/5">
+          <p class="hero-details-text font-sf text-xs sm:text-base text-left text-primary lg:mb-10 lg:leading-7 lg:w-3/5">
             I am a product designer and a design enthusiast. I love creating seamless userexperiences and digital
             user interfaces. I am passionate about solving complex problems through data-driven processes that
             translate business objectives into solutions, putting empathy for the user as a key ingredient.
@@ -295,7 +295,7 @@
             </div>
 
             <div class="floating-circle flex justify-center items-center lg:mb-20">
-              <svg class="w-28" viewBox="0 0 199 177" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="w-28 sm:w-32" viewBox="0 0 199 177" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M42.8722 169.863L43.4213 170.311L39.8269 174.713L37.1547 172.531L37.5583 172.036L39.6814 173.77L40.9168 172.257L38.9676 170.665L39.3662 170.177L41.3154 171.769L42.8722 169.863Z"
                   fill="#454545" />
@@ -473,20 +473,20 @@
     <section class="featured-projects py-16 lg:py-20 font-normal" id="featured-projects"> 
       <p class="font-sf text-xs lg:text-sm lg:tracking-widest dark:text-white">FEATURED PROJECTS</p>
 
-      <p class="pojects-big-text font-caudex text-light text-lg5xl lg:text-8xl lg:tracking-tighter dark:text-dark">
+      <p class="pojects-big-text font-caudex text-light text-lg5xl sm:text-lg7xl lg:text-8xl lg:tracking-tighter dark:text-dark">
         PROJECTS
       </p>
 
       <div class="scroll-and-projects flex justify-between mt-16 lg:pt-20 lg:pb-20">
         <div class="vertical-scroll relative h-40 lg:h-56 w-px lg:w-px bg-gray-300 dark:bg-gray-900 overflow-x-hidden">
-          <div class="inner-vertical-scroll absolute bottom-0 h-20 lg:h-28 w-px lg:w-px dark:border-white"></div>
+          <div class="inner-vertical-scroll absolute bottom-0 h-20 lg:h-28 w-px lg:w-px bg-black dark:bg-white"></div>
         </div>
 
-        <div class="projects space-y-10 w-3/4 lg:pl-28">
+        <div class="projects space-y-10 sm:space-y-14 w-3/4 lg:pl-28">
           <div class="jumiar lg:mb-0">
-            <p class="num font-caudex text-sm lg:text-xl">01</p>
+            <p class="num font-caudex text-sm sm:text-base lg:text-xl">01</p>
 
-            <p class="juimar-header-text font-caudex my-2 lg:pb-5 text-xl lg:text-5xl tracking-tighter dark:text-white">
+            <p class="juimar-header-text font-caudex my-2 lg:pb-5 text-xl sm:text-2xl lg:text-5xl tracking-tighter dark:text-white">
               <a href="jumiar.html">
                 JUMIAR
               </a>
@@ -499,10 +499,10 @@
           </div>
 
           <div class="gtworld lg:mb-0">
-            <p class="num font-caudex text-sm lg:text-xl">02</p>
+            <p class="num font-caudex text-sm sm:text-base lg:text-xl">02</p>
 
             <p
-              class="gtworld-header-text font-caudex my-2 lg:pb-5 text-xl lg:text-5xl tracking-tighter dark:text-white">
+              class="gtworld-header-text font-caudex my-2 lg:pb-5 text-xl sm:text-2xl lg:text-5xl tracking-tighter dark:text-white">
               <a href="gtworld.html">
                 GTWorld Banking App
               </a>
@@ -515,9 +515,9 @@
           </div>
 
           <div class="crptly lg:mb-0">
-            <p class="num font-caudex text-sm lg:text-xl">03</p>
+            <p class="num font-caudex text-sm sm:text-base lg:text-xl">03</p>
 
-            <p class="crptly-header-text font-caudex my-2 lg:pb-5 text-xl lg:text-5xl tracking-tighter dark:text-white">
+            <p class="crptly-header-text font-caudex my-2 lg:pb-5 text-xl sm:text-2xl lg:text-5xl tracking-tighter dark:text-white">
               <a href="crptly.html">
                 Crptly
               </a>
@@ -530,9 +530,9 @@
           </div>
 
           <div class="paysure lg:mb-0">
-            <p class="num font-caudex text-sm lg:text-xl">04</p>
+            <p class="num font-caudex text-sm sm:text-base lg:text-xl">04</p>
 
-            <p class="paysure-header-text font-caudex my-2 lg:pb-5 text-xl lg:text-5xl tracking-tighter dark:text-white">
+            <p class="paysure-header-text font-caudex my-2 lg:pb-5 text-xl sm:text-2xl lg:text-5xl tracking-tighter dark:text-white">
               <a href="paysure.html">
                 Paysure
               </a>
@@ -557,7 +557,7 @@
           <p class="top uppercase text-tiny lg:text-xs tracking-widest dark:text-white">online design community builder
           </p>
 
-          <p class="bottom text-sm lg:text-lg text-primary lg:leading-7 lg:pt-3">
+          <p class="bottom text-sm sm:text-base lg:text-lg text-primary lg:leading-7 lg:pt-3">
             I have also contributed immensely to the online design
             community with asset files, online videos and articles.
           </p>
@@ -572,18 +572,18 @@
     </section>
   </div>
 
-  <section class="contributions overflow-x-hidden py-16 lg:py-20 pl-7" id="contributions">
+  <section class="contributions overflow-x-hidden py-16 lg:py-20 pl-7 sm:pl-14" id="contributions">
     <p class="contribution-header-text font-sf text-xs lg:text-sm lg:tracking-widest dark:text-white">CONTRIBUTIONS</p>
 
-    <p class="contribution-text font-caudex text-5xl lg:text-8xl lg:tracking-tighter text-light dark:text-dark">
+    <p class="contribution-text font-caudex text-5xl sm:text-lg7xl lg:text-8xl lg:tracking-tighter text-light dark:text-dark">
       CONTRIBUTIONS
     </p>
 
-    <div class="grid-div w-full mt-10 lg:mt-16 block space-y-7 lg:grid grid-cols-3 lg:gap-x-72 pr-7">
+    <div class="grid-div w-full mt-10 lg:mt-16 block space-y-7 lg:grid grid-cols-3 lg:gap-x-72 pr-7 sm:pr-14">
       <div class="presently">
         <div class="presently-container lg:w-80 lg:h-72 p-7 lg:p-7">
           <a href="#">
-            <svg class="w-3 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M26.0208 22.2909C26.8837 22.2909 27.5833 21.5914 27.5833 20.7284L27.5832 1.97848C27.5832 1.11553 26.8837 0.415979 26.0207 0.415979L7.27076 0.415977C6.40781 0.415977 5.70825 1.11553 5.70825 1.97848C5.70825 2.84142 6.40781 3.54098 7.27075 3.54098L22.2485 3.54098L0.957567 24.8319C0.347372 25.4421 0.347372 26.4314 0.957567 27.0416C1.56776 27.6518 2.55708 27.6518 3.16728 27.0416L24.4582 5.75068L24.4583 20.7284C24.4583 21.5914 25.1578 22.2909 26.0208 22.2909Z"
                 fill="#2D2D2F" />
@@ -591,11 +591,11 @@
           </a>
 
 
-          <p class="presently-header-text font-caudex font-semibold text-2xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+          <p class="presently-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
             Presently
            </p>
 
-          <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 leading-5">
+          <p class="presently-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 leading-5">
             I have also contributed immensely to the online design community with
             asset files, online videos and articles.
           </p>
@@ -616,7 +616,7 @@
       <div class="memoji">
         <div class="memoji-container lg:w-80 lg:h-72 p-7 lg:p-7">
           <a href="#">
-            <svg class="w-3 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M26.0208 22.2909C26.8837 22.2909 27.5833 21.5914 27.5833 20.7284L27.5832 1.97848C27.5832 1.11553 26.8837 0.415979 26.0207 0.415979L7.27076 0.415977C6.40781 0.415977 5.70825 1.11553 5.70825 1.97848C5.70825 2.84142 6.40781 3.54098 7.27075 3.54098L22.2485 3.54098L0.957567 24.8319C0.347372 25.4421 0.347372 26.4314 0.957567 27.0416C1.56776 27.6518 2.55708 27.6518 3.16728 27.0416L24.4582 5.75068L24.4583 20.7284C24.4583 21.5914 25.1578 22.2909 26.0208 22.2909Z"
                 fill="#2D2D2F" />
@@ -624,11 +624,11 @@
           </a>
 
 
-          <p class="memoji-header-text font-caudex font-semibold text-2xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+          <p class="memoji-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
             Memoji
           </p>
 
-          <p class="memoji-details-text font-sf text-primary text-xs mt-2 lg:mt-4 leading-5">
+          <p class="memoji-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 leading-5">
             I have also contributed immensely to the online design community with
             asset files, online videos and articles.
           </p>
@@ -649,7 +649,7 @@
       <div class="desktop-mockup">
         <div class="desktop-mockup-container lg:w-80 lg:h-72 p-7 lg:p-7">
           <a href="#">
-            <svg class="w-3 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-3 sm:w-4 lg:w-5" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M26.0208 22.2909C26.8837 22.2909 27.5833 21.5914 27.5833 20.7284L27.5832 1.97848C27.5832 1.11553 26.8837 0.415979 26.0207 0.415979L7.27076 0.415977C6.40781 0.415977 5.70825 1.11553 5.70825 1.97848C5.70825 2.84142 6.40781 3.54098 7.27075 3.54098L22.2485 3.54098L0.957567 24.8319C0.347372 25.4421 0.347372 26.4314 0.957567 27.0416C1.56776 27.6518 2.55708 27.6518 3.16728 27.0416L24.4582 5.75068L24.4583 20.7284C24.4583 21.5914 25.1578 22.2909 26.0208 22.2909Z"
                 fill="#2D2D2F" />
@@ -658,11 +658,11 @@
 
 
           <p
-            class="desktop-mockup-header-text font-caudex font-semibold text-2xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
+            class="desktop-mockup-header-text font-caudex font-semibold text-2xl sm:text-3xl lg:text-4xl mt-5 lg:mt-10 dark:text-white">
             Desktop Mockup
           </p>
 
-          <p class="desktop-mockup-details-text font-sf text-primary text-xs mt-2 lg:mt-4 leading-5">
+          <p class="desktop-mockup-details-text font-sf text-primary text-xs mt-2 lg:mt-4 sm:pr-16 leading-5">
             I have also contributed immensely to the online design community with
             asset files, online videos and articles.
           </p>
@@ -682,7 +682,7 @@
     </div>
   </section>
 
-  <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
+  <div class="container mx-auto px-8 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
     <section class="more-on-youtube lg:w-full py-10 lg:py-20" id="more-on-youtube">
 
       <p class="uppercase font-sf text-xs lg:text-xs lg:tracking-wider lg:mb-7 dark:text-white">more on youtube...</p>
@@ -696,7 +696,7 @@
         </div>
 
         <div class="texts py-5 lg:py-3 px-5 lg:px-10 z-50">
-          <p class="name capitalize font-caudex font-semibold text-base lg:text-3xl dark:text-white">
+          <p class="name capitalize font-caudex font-semibold text-base sm:text-lg lg:text-3xl dark:text-white">
             ozenua oluwatobi john
           </p>
 
@@ -709,22 +709,22 @@
         </div>
 
         <div class="z-10">
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:hidden w-16 h-80 absolute -bottom-20 right-20"></div>
-          <div class="rotated-block bg-gray-200 dark:bg-darkblock lg:hidden w-16 h-80 absolute -bottom-20 -right-10"></div>
+          <div class="rotated-block animate-pulse bg-gray-200 dark:bg-darkblock lg:hidden w-16 h-80 absolute -bottom-20 right-20"></div>
+          <div class="rotated-block animate-pulse bg-gray-200 dark:bg-darkblock lg:hidden w-16 h-80 absolute -bottom-20 -right-10"></div>
         </div>
       </div>
     </section>
   </div>
 
   <footer class="bg-gray-200 dark:bg-black lg:px-16 py-14 lg:py-24 mt-24">
-    <div class="container mx-auto px-4">
+    <div class="container mx-auto px-4 sm:px-8">
       <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
-        <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
-          <p class="got-an-idea font-caudex text-black dark:text-white text-2xl lg:text-5xl">
+        <div class="texts-container flex lg:block items-baseline space-x-2 sm:space-x-4 lg:space-y-5">
+          <p class="got-an-idea font-caudex text-black dark:text-white text-2xl sm:text-3xl lg:text-5xl">
             Got an idea?
           </p>
 
-          <p class="lets-talk font-sf text-black dark:text-white text-base lg:text-xl">
+          <p class="lets-talk font-sf text-black dark:text-white text-base sm:text-lg lg:text-xl">
             Let's talk about it.
           </p>
         </div>
