--- a/src/paysure.html
+++ b/src/paysure.html
@@ -19,7 +19,7 @@
     <div class="container mx-auto px-7 sm:px-14 md:px-16 lg:px-24 xl:px-24 2xl:px-28">
         <nav>
             <div
-                class="nav-container font-sf dark:text-black dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
+                class="nav-container font-sf text-black dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
                 <div class="logo">
                     <p class="text-tiny lg:text-tiny">
                         <a href="index.html">OZENUA OLUWATOBI</a>
@@ -48,7 +48,7 @@
         </nav>
 
         <section class="header space-y-7 py-10 lg:py-16">
-            <p class="header-text dark:text-black dark:text-white font-caudex text-xl lg:text-lg4xl">
+            <p class="header-text -black dark:text-white font-caudex text-xl lg:text-lg4xl">
                 Pay sure
             </p>
 
